minor refactoring for ImageController + use png images.

--- a/src/main/resources/props/common.properties
+++ b/src/main/resources/props/common.properties
@@ -1,4 +1,4 @@
 common.prop=common
 image.file.path=/Users/sergey/Documents/bestCar/images
 image.brand.folder=carCompany
-image.default.name=default.jpg
+image.default.name=default.png
